--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
     <title>Document</title>
 </head>
 <body>
+
+    <h1>
+        Password
+    </h1>
+
+    <div id="password">
+
+        
+
+
+    </div>
+
+    <!-- add JS scripts -->
+    <script src="./assets/js/main.js"></script>
     
 </body>
 </html>
